--- a/src/components/Slaider/Slaider.module.css
+++ b/src/components/Slaider/Slaider.module.css
@@ -15,7 +15,7 @@
 
 .carouselWrapper {
   position: relative;
-  max-width: 100%;
+  max-width: 1026px;
   margin: 0 auto;
   overflow: hidden; 
   
@@ -26,7 +26,7 @@
   gap: 30px;
   padding: 0 20px;
   scroll-behavior: smooth;
-  width: calc(270px * 6 + 30px * 5); /* 6 карточек + gap между ними */
+  
   scrollbar-width: none;
 }
 
@@ -54,8 +54,8 @@
   background-color: #e0e0e0;
   border-radius: 10px;
   margin-bottom: 20px;
-  background-size: cover; /* Чтобы изображения заполняли контейнер */
-  background-position: center; /* Центрируем изображение */
+  background-size: cover; 
+  background-position: center;
 }
 
 .petCard h3 {
@@ -84,6 +84,7 @@
 .scrollButton {
   position: absolute;
   top: 50%;
+  width:  100%;
   transform: translateY(-50%);
   background-color: #f5f5f5;
   border: 2px solid #f1cdb3;
@@ -126,12 +127,12 @@
   color: #fff;
 }
 
-/* Ограничиваем видимую область для 3 карточек */
+
 .carouselWrapper {
-  max-width: calc(270px * 3 + 30px * 2); /* 3 карточки + gap между ними */
+  max-width: calc(270px * 3 + 30px * 2); 
 }
 
-/* Мобильная адаптация */
+
 @media (max-width: 768px) {
   .carouselTitle {
     font-size: 24px;
